// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<InlineNotification /> LongText story renders snapshot 1`] = `
<div
  class="inline-notification inline-notification--success"
>
  <svg
    class="icon inline-notification__icon inline-notification__icon-success"
    fill="currentColor"
    height="1.5rem"
    role="img"
    style="--icon-size: 1.5rem;"
    width="1.5rem"
    xmlns="http://www.w3.org/2000/svg"
  >
    <title
      id="3"
    >
      success
    </title>
    <use
      xlink:href="test-file-stub#check-circle"
    />
  </svg>
  <span
    class="text text--body text--success"
  >
    Long text inline notification. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
  </span>
</div>
`;

exports[`<InlineNotification /> Score story renders snapshot 1`] = `
<div
  class="inline-notification inline-notification--success"
>
  <svg
    class="icon inline-notification__icon inline-notification__icon-success"
    fill="currentColor"
    height="1.5rem"
    role="img"
    style="--icon-size: 1.5rem;"
    width="1.5rem"
    xmlns="http://www.w3.org/2000/svg"
  >
    <title
      id="2"
    >
      success
    </title>
    <use
      xlink:href="test-file-stub#check-circle"
    />
  </svg>
  <span
    class="text text--body text--success"
  >
    Inline notifications lorem ipsum text
    <span
      class="text text--body text--base"
    >
       
      Score:
    </span>
    <span
      class="text text--body text--base text--bold-weight"
    >
       
      9/10
    </span>
  </span>
</div>
`;

exports[`<InlineNotification /> StrongVariants story renders snapshot 1`] = `
<div
  style="display: inline-flex; flex-direction: column; gap: 0.25rem;"
>
  <div
    class="inline-notification inline-notification--brand inline-notification--brand-strong"
  >
    <svg
      class="icon inline-notification__icon inline-notification__icon-brand"
      fill="currentColor"
      height="1.5rem"
      role="img"
      style="--icon-size: 1.5rem;"
      width="1.5rem"
      xmlns="http://www.w3.org/2000/svg"
    >
      <title
        id="8"
      >
        info
      </title>
      <use
        xlink:href="test-file-stub#info"
      />
    </svg>
    <span
      class="text text--body text--brand"
    >
      brand inline notification lorem ipsum
    </span>
  </div>
  <div
    class="inline-notification inline-notification--success inline-notification--success-strong"
  >
    <svg
      class="icon inline-notification__icon inline-notification__icon-success"
      fill="currentColor"
      height="1.5rem"
      role="img"
      style="--icon-size: 1.5rem;"
      width="1.5rem"
      xmlns="http://www.w3.org/2000/svg"
    >
      <title
        id="9"
      >
        success
      </title>
      <use
        xlink:href="test-file-stub#check-circle"
      />
    </svg>
    <span
      class="text text--body text--success"
    >
      success inline notification lorem ipsum
    </span>
  </div>
  <div
    class="inline-notification inline-notification--warning inline-notification--warning-strong"
  >
    <svg
      class="icon inline-notification__icon inline-notification__icon-warning"
      fill="currentColor"
      height="1.5rem"
      role="img"
      style="--icon-size: 1.5rem;"
      width="1.5rem"
      xmlns="http://www.w3.org/2000/svg"
    >
      <title
        id="10"
      >
        alert
      </title>
      <use
        xlink:href="test-file-stub#warning"
      />
    </svg>
    <span
      class="text text--body text--warning"
    >
      warning inline notification lorem ipsum
    </span>
  </div>
  <div
    class="inline-notification inline-notification--yield inline-notification--yield-strong"
  >
    <svg
      class="icon inline-notification__icon inline-notification__icon-yield"
      fill="currentColor"
      height="1.5rem"
      role="img"
      style="--icon-size: 1.5rem;"
      width="1.5rem"
      xmlns="http://www.w3.org/2000/svg"
    >
      <title
        id="11"
      >
        review
      </title>
      <use
        xlink:href="test-file-stub#error"
      />
    </svg>
    <span
      class="text text--body text--base"
    >
      yield inline notification lorem ipsum
    </span>
  </div>
</div>
`;

exports[`<InlineNotification /> SubtleVariants story renders snapshot 1`] = `
<div
  style="display: inline-flex; flex-direction: column; gap: 0.25rem;"
>
  <div
    class="inline-notification inline-notification--brand"
  >
    <svg
      class="icon inline-notification__icon inline-notification__icon-brand"
      fill="currentColor"
      height="1.5rem"
      role="img"
      style="--icon-size: 1.5rem;"
      width="1.5rem"
      xmlns="http://www.w3.org/2000/svg"
    >
      <title
        id="4"
      >
        info
      </title>
      <use
        xlink:href="test-file-stub#info"
      />
    </svg>
    <span
      class="text text--body text--brand"
    >
      brand inline notification lorem ipsum
    </span>
  </div>
  <div
    class="inline-notification inline-notification--success"
  >
    <svg
      class="icon inline-notification__icon inline-notification__icon-success"
      fill="currentColor"
      height="1.5rem"
      role="img"
      style="--icon-size: 1.5rem;"
      width="1.5rem"
      xmlns="http://www.w3.org/2000/svg"
    >
      <title
        id="5"
      >
        success
      </title>
      <use
        xlink:href="test-file-stub#check-circle"
      />
    </svg>
    <span
      class="text text--body text--success"
    >
      success inline notification lorem ipsum
    </span>
  </div>
  <div
    class="inline-notification inline-notification--warning"
  >
    <svg
      class="icon inline-notification__icon inline-notification__icon-warning"
      fill="currentColor"
      height="1.5rem"
      role="img"
      style="--icon-size: 1.5rem;"
      width="1.5rem"
      xmlns="http://www.w3.org/2000/svg"
    >
      <title
        id="6"
      >
        alert
      </title>
      <use
        xlink:href="test-file-stub#warning"
      />
    </svg>
    <span
      class="text text--body text--warning"
    >
      warning inline notification lorem ipsum
    </span>
  </div>
  <div
    class="inline-notification inline-notification--yield"
  >
    <svg
      class="icon inline-notification__icon inline-notification__icon-yield"
      fill="currentColor"
      height="1.5rem"
      role="img"
      style="--icon-size: 1.5rem;"
      width="1.5rem"
      xmlns="http://www.w3.org/2000/svg"
    >
      <title
        id="7"
      >
        review
      </title>
      <use
        xlink:href="test-file-stub#error"
      />
    </svg>
    <span
      class="text text--body text--base"
    >
      yield inline notification lorem ipsum
    </span>
  </div>
</div>
`;

exports[`<InlineNotification /> Success story renders snapshot 1`] = `
<div
  class="inline-notification inline-notification--success"
>
  <svg
    class="icon inline-notification__icon inline-notification__icon-success"
    fill="currentColor"
    height="1.5rem"
    role="img"
    style="--icon-size: 1.5rem;"
    width="1.5rem"
    xmlns="http://www.w3.org/2000/svg"
  >
    <title
      id="1"
    >
      success
    </title>
    <use
      xlink:href="test-file-stub#check-circle"
    />
  </svg>
  <span
    class="text text--body text--success"
  >
    Inline notifications lorem ipsum text
  </span>
</div>
`;
